--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ Bob Ippolito (<a href="https://twitter.com/etrepum"><span class="citation" data-
 <li>Will help me understand more CS papers</li>
 </ul>
 </section>
-<section id="starting-with-haskell" class="slide level1">
-<h1>Starting with Haskell</h1>
+<section id="starting-out" class="slide level1">
+<h1>Starting out</h1>
 <ul>
 <li>Intimidated by Haskell for years</li>
 <li>Took a class while at Facebook</li>
@@ -202,6 +202,9 @@ John Hughes (QuickCheck), Philip Wadler (Subtyping for Erlang)
 </dd>
 <dt>Semiconductor Design</dt>
 <dd><a href="http://www.slideshare.net/mansu/bluespec-talk">Bluespec</a> - high-level language for chip design
+</dd>
+<dt>Internet</dt>
+<dd><a href="https://skillsmatter.com/skillscasts/4429-simon-marlow">Facebook</a> - Haxl rule engine &quot;fighting spam with pure functions&quot;
 </dd>
 </dl>
 </section>
