--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
   <!--[if lt IE 9]>
   <script src="reveal.js/lib/js/html5shiv.js"></script>
   <![endif]-->
+    <title>Intro to Haskell for Erlangers</title>
     <link rel="stylesheet" href="css/slides.css"/>
     <script src="d3/d3.min.js"></script>
     <script src="js/slides.js"></script>
